crates/bityzba/tests/ui/fail/no_deref_mut.stderr
warning: variable does not need to be mutable
  --> tests/ui/fail/no_deref_mut.rs:10:9
   |
10 |     let mut span = new!(Span {
   |         ----^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0594]: cannot assign to data in dereference of `Span`
  --> tests/ui/fail/no_deref_mut.rs:15:5
   |
15 |     span.end = 2;
   |     ^^^^^^^^^^^^ cannot assign
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `Span`
